# wrpl

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
modules/: bindings.cpp  deserializer.cpp  packets.hpp  parser.cpp
src/: main.cpp
